--- a/droplet-framework/pom.xml
+++ b/droplet-framework/pom.xml
@@ -68,6 +68,10 @@
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension</artifactId>
+        </dependency>
 
         <!-- Jwt -->
         <dependency>
