--- a/droplet-blog/src/main/resources/application.yml
+++ b/droplet-blog/src/main/resources/application.yml
@@ -12,6 +12,28 @@ spring:
       url: jdbc:mysql://192.168.56.117:3306/droplet_blog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: root
       password: 1123581321345589
+  # redis
+  redis:
+    # 地址
+    host: localhost
+    # 端口，默认为6379
+    port: 6379
+    # 数据库索引
+    database: 1
+    # 密码
+    password:
+    # 连接超时时间
+    timeout: 10s
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池的最大数据库连接数
+        max-active: 8
+        # #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
 # MyBatis-Plus
 mybatis-plus:
   configuration:
@@ -19,7 +41,9 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
+      # 逻辑删除标志
       logic-delete-field: delFlag
       logic-delete-value: 1
       logic-not-delete-value: 0
+      # 主键策略
       id-type: auto
