--- a/droplet-blog/src/main/resources/application.yml
+++ b/droplet-blog/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   # redis
   redis:
     # 地址
-    host: localhost
+    host: 192.168.56.117
     # 端口，默认为6379
     port: 6379
     # 数据库索引
