[Ignore] 更新 . gitignore 文件

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,5 @@ dist
 .pnp.*
 
 droplet-framework/src/main/resources/rebel.xml
+droplet-admin/src/main/resources/rebel.xml
+droplet-blog/src/main/resources/rebel.xml
